--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "whatsappcloudapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/src/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node build/index.js",
-    "dev": "ts-node-dev --ignore-watch node_modules src/index.ts"
+    "start": "node build/src/index.js",
+    "emulate": "npm run build && functions-framework --target=app"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@google-cloud/functions-framework": "^3.2.1",
     "@types/express": "^4.17.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
